[tool.poetry]
name = "aws-rag-bot-light"
version = "0.1.0"
description = "Lightweight version of aws-rag-bot for lambda deployment"
authors = ["danjamk <dan@risegardens.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
langchain = "^0.1.11"
boto3 = "^1.34.59"
requests-aws4auth = "^1.2.3"
opensearch-py = "^2.4.2"
transformers = "^4.38.2"
torch = "^2.2.1"
anthropic = "^0.19.1"


[tool.poetry.group.dev.dependencies]
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
